Fixed x axis not showing

--- a/src/css/d3.css
+++ b/src/css/d3.css
@@ -13,9 +13,9 @@
   fill: orangered ;
 }
 
-.x.axis path {
+/*.x.axis path {
   display: none;
-}
+}*/
 
 .d3-tip {
   line-height: 1;
