--- a/src/css/index.css
+++ b/src/css/index.css
@@ -113,7 +113,7 @@ table {
 
 /*Line graph*/
 .axis--x path {
-  display: none;
+  /*display: none;*/
 }
 
 .line {
